<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sample</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="connection_type">Connection type</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bt">BT</string>
    <string name="usb">USB</string>
    <string name="tcpip">TCP/IP</string>
    <string name="tcp">TCP</string>
    <string name="list">List</string>

    <string name="address">Address</string>

    <string name="log">Log</string>

    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="send_text">sendText</string>
    <string name="send_text_ex">sendTextEx</string>
    <string name="print_barcode">printBarcode</string>
    <string name="print_pdf417">printPDF417</string>
    <string name="print_qrcode">printQRcode</string>
    <string name="cut_paper">cutPaper</string>
    <string name="open_drawer">openDrawer</string>
    <string name="buzzer">buzzer</string>
    <string name="send_binary">sendBinary</string>
    <string name="send_data_file">sendDataFile</string>
    <string name="abort">abort</string>
    <string name="get_status">getStatus</string>
    <string name="register_logo">registerLogo</string>
    <string name="print_logo">printLogo</string>
    <string name="unregister_logo">unregisterLogo</string>
    <string name="register_style_sheet">registerStyleSheet</string>
    <string name="unregister_style_sheet">unregisterStyleSheet</string>
    <string name="reset_printer">resetPrinter</string>
    <string name="get_printer_response">getPrinterResponse</string>

    <string name="property">Property</string>

    <string name="dialog_connect_title">Select printer model</string>
    <string name="dialog_send_text_title">Input text data</string>
    <string name="dialog_print_barcode_title">Input barcode data</string>
    <string name="dialog_print_pdf417_title">Input pdf417 data</string>
    <string name="dialog_print_qrcode_title">Input qrcode data</string>
    <string name="dialog_cut_paper_title">Select cutting method</string>
    <string name="dialog_open_drawer_title">Select open drawer</string>
    <string name="dialog_buzzer_title">Input buzzer time</string>
    <string name="dialog_send_binary_title">Input binary data</string>
    <string name="dialog_print_alignment_title">Select print alignment</string>
    <string name="dialog_register_logo_title">Input register logo id</string>
    <string name="dialog_print_logo_title">Input print logo id</string>
    <string name="dialog_unregister_logo_title">Input unregister logo id</string>
    <string name="dialog_register_style_sheet_title">Input register style sheet number</string>
    <string name="dialog_unregister_style_sheet_title">Input unregister style sheet number</string>
    <string name="dialog_get_printer_response_title">Select printer response</string>
    <string name="dialog_finish_app_title">Application</string>
    <string name="dialog_finish_app_message">Application is ended.\nIs it all right?</string>

    <string name="text">Text</string>
    <string name="bold">Bold</string>
    <string name="underline">Underline</string>
    <string name="reverse">Reverse</string>
    <string name="font">Font</string>
    <string name="scale">Scale</string>
    <string name="alignment">Alignment</string>

    <string name="data">Data</string>
    <string name="barcode_symbol">Barcode symbol</string>
    <string name="module_size">Module size</string>
    <string name="hri_position">HRI position</string>
    <string name="hri_font">HRI font</string>
    <string name="nw_ratio">NW ratio</string>

    <string name="qr_model">Model</string>
    <string name="pdf417_symbol">PDF417 symbol</string>
    <string name="error_correction">Error correction</string>
    <string name="row">Row</string>
    <string name="column">Column</string>
    <string name="module_width">Module width</string>
    <string name="module_height">Module height</string>

    <string name="drawer_num">Drawer number</string>
    <string name="pulse_width">Pulse width</string>

    <string name="on_time">On time</string>
    <string name="off_time">Off time</string>

    <string name="logo_id">Logo id</string>

    <string name="settings">Settings</string>

    <string name="send_timeout">Send timeout</string>
    <string name="receive_timeout">Receive timeout</string>
    <string name="socket_keeping_time">Socket keeping time</string>
    <string name="international_character">International character</string>
    <string name="code_page">Code page</string>
    <string name="secure_connection">Secure connection</string>
    <string name="insecure_connection">Insecure connection</string>
    <string name="printer_model">Printer model</string>

    <string name="invalid_value">The invalid value was specified.</string>

    <string name="scan_devices">Scan devices</string>
    <string name="enabled_bluetooth">Enabled Bluetooth</string>
    <string name="bluetooth_not_supported">Bluetooth not supported</string>
    <string name="scanning_devices">Scanning devices...</string>

    <string name="key_send_timeout">key_send_timeout</string>
    <string name="key_receive_timeout">key_receive_timeout</string>
    <string name="key_socket_keeping_time">key_socket_keeping_time</string>
    <string name="key_international_character">key_international_character</string>
    <string name="key_code_page">key_code_page</string>
    <string name="key_secure_connection">key_secure_connection</string>

    <string name="file_list_select_here">Select here</string>
    <string name="file_list_dont_get_list">Cannot get list.</string>
    <string name="file_list_empty">&lt;Empty&gt;</string>

    <string name="utility_attention">Attention</string>
    <string name="utility_please_download">You can use this function only in a pay version.\nDo you download</string>

</resources>
